--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a:hover, a:focus {
 	background: url(img/line.png) top repeat-y;
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 50px 0;
 	position: relative;
 }
 
@@ -107,7 +107,7 @@ a:hover, a:focus {
 	float: left;
 	clear: left;
 	width: 436px;
-	margin-bottom: 15px;
+	margin-bottom: 50px;
 	position: relative;
 	z-index: 2;
 }
@@ -123,7 +123,7 @@ a:hover, a:focus {
 	height: 15px;
 	position: absolute;
 	right: -18px;
-	top: 20px;
+	top: 30px;
 }
 
 .timeline .right > .pointer {
@@ -133,27 +133,11 @@ a:hover, a:focus {
 }
 
 .timeline > .left + .right > .pointer {
-	top: 40px;
+	top: 60px;
 }
 
-.timeline > .right + li > .pointer {
-	top: 40px;
-}
-
-.timeline .highlight {
-	clear: both;
-	width: auto;
-	float: none;
-}
-
-.timeline .highlight .pointer {
-	background-image: url(img/icons-5.png);
-	background-position: -26px -28px;
-	height: 21px;
-	width: 15px;
-	left: 50%;
-	top: -20px !important;
-	margin-left: -7px;
+.timeline > .right + .left > .pointer {
+	top: 60px;
 }
 
 .timeline .spine {
@@ -172,39 +156,59 @@ a:hover, a:focus {
 
 .content {
 	background: #fff;
-	padding: 5px;
+	padding: 10px 10px 10px 10px;
 	border: 1px #C4CDE0 solid;
 	border-radius: 3px;
 }
 
-.story {
-	padding: 10px;
+.avatar {
+	position: absolute;
+	top: -24px;
+	left: -24px;
+	width: 48px;
+	height: 48px;
+	padding: 5px;
+	border: 1px solid #ABABAB;
+	border-radius: 100px;
+	background: #F9F9F9;
 }
 
-.profile {
-	border-bottom: 1px #CCC solid;
-	padding-bottom: 5px;
+.right .avatar {
+	left: auto;
+	right: -24px;
+}
+
+.avatar img {
+	width: 48px;
+	height: 48px;
+	border-radius: 100px;
+}
+
+.tweet {
 	margin-bottom: 10px;
-	font-size: 11px;
+	padding: 0 10px 0 30px;
+	font-size: 16px;
+	word-wrap: break-word; 
+	word-break: normal; 
 }
 
-.profile .avatar {
-	display: inline-block;
+.right .tweet {
+	padding: 0 30px 0 10px;
 }
 
-.profile .avatar img {
-	width: 32px;
-	height: 32px;
+.meta {
+	padding: 5px 10px;
+	font-size: 12px;
+	background: #EDEFF4;
+	overflow: hidden;
 }
 
-.profile .meta {
-	display: inline-block;
-	vertical-align: top;
-	padding-left: 5px;
+.meta .time {
+	float: left;
 }
 
-.profile .meta > p {
-	margin: 0;
+.meta .source {
+	float: right;
 }
 
 .photo {
@@ -230,4 +234,20 @@ a:hover, a:focus {
 #Spinner {
 	text-align: center;
 	padding: 10px 0;
+}
+
+.retweeted {
+	display: block;
+	position: absolute;
+	top: 1px;
+	right: 1px;
+	width: 24px;
+	height: 24px;
+	background: url(img/retweet.png) no-repeat 0 0;
+}
+
+.right .retweeted {
+	left: 1px;
+	right: auto;
+	background-position: -24px 0;
 }
