--- a/style.css
+++ b/style.css
@@ -186,14 +186,22 @@ a:hover, a:focus {
 
 .tweet {
 	margin-bottom: 10px;
-	padding: 0 10px 0 30px;
+	padding: 0 0 0 30px;
 	font-size: 16px;
 	word-wrap: break-word; 
 	word-break: normal; 
 }
 
 .right .tweet {
-	padding: 0 30px 0 10px;
+	padding: 0 30px 0 0;
+}
+
+.photo {
+	margin-bottom: 10px;
+}
+
+.photo img {
+	max-width: 416px;
 }
 
 .meta {
@@ -209,10 +217,6 @@ a:hover, a:focus {
 
 .meta .source {
 	float: right;
-}
-
-.photo {
-	margin: 0 -10px -5px -10px;
 }
 
 .controls {
