--- a/style.css
+++ b/style.css
@@ -54,18 +54,6 @@ q:before, q:after {
  * Main Style
  */
 
-body {
-	background: #FFF0F0;
-	font-size: 12px; 
-	line-height: 1.4;
-	font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
-}
-
-.container {
-	width: 901px;
-	margin: 20px auto;
-}
-
 a, a:visited {
 	color: #C35966;
 	text-decoration: none;
@@ -89,11 +77,42 @@ a:hover, a:focus {
 	*zoom: 1;
 }
 
+body {
+	background: #FFF0F0 url(img/line.png) top repeat-y;
+}
+
+.container {
+	width: 901px;
+	margin: 0 auto;
+}
+
+.head {
+	margin: 20px 0;
+}
+
+.head h1 {
+	display: inline-block;
+	margin-right: 10px;
+	font-size: 36px;
+	font-weight: bold;
+	color: #C35966;
+}
+
+.head span {
+	display: inline-block;
+	height: 24px;
+	line-height: 24px;
+	background-color: #FFF0F0;
+}
+
+.head i {
+	color: #C35966;
+}
+
 .timeline {
-	background: url(img/line.png) top repeat-y;
+	
 	list-style: none;
-	padding: 0;
-	margin: 50px 0;
+	padding-top: 50px;
 	position: relative;
 }
 
@@ -117,7 +136,7 @@ a:hover, a:focus {
 	height: 15px;
 	position: absolute;
 	right: -18px;
-	top: 30px;
+	top: 24px;
 }
 
 .timeline .right > .pointer {
@@ -127,11 +146,11 @@ a:hover, a:focus {
 }
 
 .timeline > .left + .right > .pointer {
-	top: 60px;
+	top: 48px;
 }
 
 .timeline > .right + .left > .pointer {
-	top: 60px;
+	top: 48px;
 }
 
 .timeline .spine {
@@ -148,7 +167,7 @@ a:hover, a:focus {
 	height: 100%;
 }
 
-.content {
+.timeline .content {
 	background: #FFF;
 	padding: 10px 10px 10px 10px;
 	border: 1px solid #C35966;
@@ -159,7 +178,7 @@ a:hover, a:focus {
 	background: #FFF8F8;
 }
 
-.avatar {
+.timeline .avatar {
 	position: absolute;
 	top: -24px;
 	left: -24px;
@@ -169,24 +188,24 @@ a:hover, a:focus {
 	border: 1px solid #C35966;
 	border-radius: 100px;
 	background: #FFF;
-	-webkit-transition: -webkit-transform .2s ease-out;
-	transition: transform .2s ease-out;
+	-webkit-transition: -webkit-transform .5s ease-out;
+	transition: transform .5s ease-out;
 }
 
-.right .avatar {
+.timeline .right .avatar {
 	left: auto;
 	right: -24px;
 }
 
-.avatar img {
+.timeline .avatar img {
 	width: 48px;
 	height: 48px;
 	border-radius: 100px;
 }
 
 .timeline > .left:hover .avatar {
-	-webkit-transform: rotate(-30deg);
-	transform: rotate(-30deg);
+	-webkit-transform: rotate(330deg);
+	transform: rotate(330deg);
 }
 
 .timeline > .right:hover .avatar {
@@ -194,7 +213,7 @@ a:hover, a:focus {
 	transform: rotate(30deg);
 }
 
-.tweet {
+.timeline .tweet {
 	margin-bottom: 10px;
 	padding: 0 10px 0 30px;
 	font-size: 16px;
@@ -202,52 +221,31 @@ a:hover, a:focus {
 	word-break: normal; 
 }
 
-.right .tweet {
+.timeline .right .tweet {
 	padding: 0 30px 0 10px;
 }
 
-.photo {
+.timeline .photo {
 	margin-bottom: 10px;
 }
 
-.photo img {
+.timeline .photo img {
 	max-width: 416px;
 }
 
-.meta {
+.timeline .meta {
 	padding: 5px 10px;
 	font-size: 12px;
 	background: #FFF0F0;
 	overflow: hidden;
 }
 
-.meta .time {
+.timeline .meta .time {
 	float: left;
 }
 
-.meta .source {
+.timeline .meta .source {
 	float: right;
-}
-
-.controls {
-	background: #F2F2F2;
-	margin: 5px -5px -5px -5px;
-	list-style: none;
-	padding: 4px;
-	border-top: 1px #E6E6E6 solid;
-}
-
-.controls > li {
-	display: inline-block;
-}
-
-.controls .post {
-	float: right;
-}
-
-#Spinner {
-	text-align: center;
-	padding: 10px 0;
 }
 
 .retweeted {
@@ -264,4 +262,9 @@ a:hover, a:focus {
 	left: 1px;
 	right: auto;
 	background-position: -24px -15px;
+}
+
+#Spinner {
+	text-align: center;
+	padding: 10px 0;
 }
