--- a/style.css
+++ b/style.css
@@ -87,7 +87,9 @@ body {
 }
 
 .head {
-	margin: 20px 0;
+	margin-top: 20px;
+	padding: 20px 0;
+	background-color: #FFF0F0;
 }
 
 .head h1 {
@@ -95,13 +97,13 @@ body {
 	margin-right: 10px;
 	font-size: 36px;
 	font-weight: bold;
+	color: #C35966;
 }
 
 .head span {
 	display: inline-block;
 	height: 24px;
 	line-height: 24px;
-	background-color: #FFF0F0;
 }
 
 .head i {
@@ -164,12 +166,17 @@ body {
 }
 
 .timeline .content {
-	padding: 10px 10px 10px 10px;
+	padding: 10px;
 	border: 1px solid #C35966;
-	border-radius: 3px;
+	border-radius: 10px;
+	border-top-right-radius: 0;
 	background: #FFF;
 	-webkit-transition: background .2s ease-out;
 	transition: background .2s ease-out;
+}
+
+.timeline .right .content {
+	border-top-left-radius: 0;
 }
 
 .timeline > li:hover .content {
@@ -277,4 +284,10 @@ body {
 	line-height: 100px;
 	background: url(img/loading.gif) no-repeat center center;
 	overflow: hidden;
+}
+
+.fork {
+	position: absolute;
+	top: 0;
+	right: 0;
 }
