--- a/style.css
+++ b/style.css
@@ -114,21 +114,20 @@ body {
 	padding-top: 50px;
 }
 
-.timeline > li {
+.timeline li {
 	position: relative;
 	float: left;
 	clear: left;
 	margin-bottom: 50px;
 	width: 436px;
-	z-index: 2;
 }
 
-.timeline > .right {
+.timeline .right {
 	float: right;
 	clear: right;
 }
 
-.timeline li > .pointer {
+.timeline li .pointer {
 	background: url(img/sprites.png) 0 0 no-repeat;
 	width: 19px;
 	height: 15px;
@@ -137,32 +136,18 @@ body {
 	top: 24px;
 }
 
-.timeline .right > .pointer {
+.timeline .right .pointer {
 	left: -18px;
 	right: auto;
 	background-position: -19px 0;
 }
 
-.timeline > .left + .right > .pointer {
+.timeline .left + .right .pointer {
 	top: 48px;
 }
 
-.timeline > .right + .left > .pointer {
+.timeline .right + .left .pointer {
 	top: 48px;
-}
-
-.timeline .spine {
-	position: absolute;
-	left: 436px;
-	width: 29px;
-	height: 100%;
-	z-index: 1;
-}
-
-.timeline .spine > a,
-.timeline .spine a:visited {
-	display: block;
-	height: 100%;
 }
 
 .timeline .content {
@@ -179,7 +164,7 @@ body {
 	border-top-left-radius: 0;
 }
 
-.timeline > li:hover .content {
+.timeline li:hover .content {
 	background: #FFF8F8;
 }
 
@@ -208,12 +193,12 @@ body {
 	border-radius: 100px;
 }
 
-.timeline > .left:hover .avatar {
+.timeline .left:hover .avatar {
 	-webkit-transform: rotate(330deg);
 	transform: rotate(330deg);
 }
 
-.timeline > .right:hover .avatar {
+.timeline .right:hover .avatar {
 	-webkit-transform: rotate(390deg);
 	transform: rotate(390deg);
 }
@@ -322,7 +307,7 @@ body {
 		padding-top: 10px;
 	}
 
-	.timeline > li {
+	.timeline li {
 		margin: 0 10px 30px;
 		float: none !important;
 		clear: none !important;
@@ -337,7 +322,8 @@ body {
 		top: -16px !important;
 		left: 0 !important;
 		right: auto !important;
-		float: left;
+		-webkit-transform: none !important;
+		transform: none !important;
 	}
 
 	.timeline .avatar {
